appId: com.gabealonso.eastestsexample # This is an example app id. Replace it with your app id.
---
- launchApp
- tapOn:
    id: "explore-test-id"
- tapOn: '.*File-based routing'
- assertVisible: 'This app has two screens.*'
- tapOn: '.*Images'
- assertVisible: 'For static images.*'
